# luckfox_opencv

./: CMakeLists.txt  README  getres.sh  main.cpp
sample/: rkvio.cpp  rkvio.hpp  sample_comm.c  sample_comm.h  sample_vi.c
